# aports

./: .devbuildrc  .drone.jsonnet  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  0001-main-lua-hashids-upgrade-to-1.0.5.patch  APKBUILD  APKBUILD-svn.proto  APKBUILD.5  APKBUILD.proto  AUTHORS  CODESTYLE.md  CODINGSTYLE.md  COMMITSTYLE.md  COPYING  Make.rules  Makefile  README.md  TODO  abuild  abuild-fetch.c  abuild-gzsplit.c  abuild-keygen.in  abuild-rmtemp.c  abuild-sign.in  abuild-sudo.c  abuild-tar.c  abuild.conf  abuild.in  abump.in  acceptable-package-list.txt  alpine-mini.packages  alpine.mk  alpine.packages  ap.in  apkbuild-cpan.in  (+36 more)
.githooks/: applypatch-msg  functions.sh  pre-commit  prepare-commit-msg
3dm2/: 3dm2.initd
testing/llvm-next/: 0001-Disable-dynamic-lib-tests-for-musl-s-dlclose-is-noop.patch  0002-Fix-memory-mf_exec-on-aarch64.patch  0003-LLVM-install-prefix.patch  0004-LLVM-stack-size.patch  0005-Fix-macho-invalid-test.patch  0005-Skip-roundeven-tests.patch  0006-Add-musl-triples.patch  0007-Add-musl-triples.patch  0007-Enable-stack-protector-by-default-for-Alpine-Linux.patch  0008-Enable-stack-protector-by-default-for-Alpine-Linux.patch  0009-Switch-on-default-now-relro-without-reading-osrelease.patch  0009-Use-full-version-for-liblldb-symlink-target.patch  0010-Add-version-to-libomp-soname.patch  0010-Install-lldb-tblgen-into-llvm-next-dev-subpackage.patch  0011-Standalone-libatomic.patch  0011-Use-full-version-for-liblldb-symlink-target.patch  0012-Add-version-to-libomp-soname.patch  0012-Fix-msan-with-musl.patch  0013-PPC-sanitizer-fixes.patch  0013-Standalone-libatomic.patch  0014-Basic-lsan-fixes-on-various-archs.patch  0014-Fix-msan-with-musl.patch  0015-32-bit-musl-sanitizer-fixes.patch  0016-Basic-lsan-fixes-on-various-archs.patch  0017-LLD-add-build-shared-libs-option.patch  0018-PyClang-cindex-add-sover-to-libclang.patch  0018-Use-gas-as-clang-gnutools-assembler.patch  0019-LLD-add-build-shared-libs-option.patch  0019-Libunwind-link-ssp_nonshared.patch  0020-AArch64-llvm-exegesis-musl-remove-redefinition-prctl.patch  0020-PyClang-cindex-add-sover-to-libclang.patch  0021-Offload-tblgen-depends-on-cxx-headers.patch  0021-PyClang-cindex-add-sover-to-libclang.patch  0022-Offload-tblgen-depends-on-cxx-headers.patch  0801-Revert-PR25882-.gnu.attributes-are-not-checked-for-s.patch  0802-Binutils-ld-fix-static-linking.patch  APKBUILD  pyproject.toml  trim-exports_patch
testing/termbox/: APKBUILD  meson.build  waf.patch
unmaintained/apache-mod-backtrace/: APKBUILD  Makefile.in  configure.in
(+60784 files in other folders)
