[build-system]
requires = ["flit_core >= 3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lit"
description = "A Software Testing Tool"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    {name = "Daniel Dunbar", email = "daniel@minormatter.com"},
]
keywords = ["test C++ automatic discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version"]

[project.urls]
homepage = "https://llvm.org"

[project.scripts]
lit = "lit.main:main"
