# Process this file with autoconf to produce a configure script.

AC_INIT(mod_backtrace.c)

# Basic stuff

AC_PROG_CC
AC_PROG_CPP
AC_STDC_HEADERS

# We use axps to compile source files, which may be in /usr/sbin
AC_ARG_WITH(apxs,
[  --with-apxs=PATH			 Specify path to apxs],
[ APXS="$withval" ],
[ AC_PATH_PROGS([APXS], [apxs2 apxs],, [$PATH:/usr/sbin]) ])

AC_ARG_WITH(apache, 
[  --with-apache=PATH        Specify path to apache executable],
[ HTTPD="$withval" ],
[ AC_PATH_PROG([HTTPD], [httpd], [/usr/sbin/httpd], [$PATH:/usr/sbin]) ])

APACHE_VER=`${HTTPD} -v | grep version`
if echo "$APACHE_VER" | grep -q "/2\."
then
 	APXS_FLAGS=-DAPACHE2
	SODIR=.libs/
    echo "Building for Apache 2."
else
    echo "Building for Apache 1."
fi

# Check for some headers

AC_CHECK_HEADERS(stdlib.h unistd.h sys/socket.h sys/time.h grp.h)
AC_CHECK_HEADERS(nss_common.h nss.h)

# Determine size of basic types

AC_CHECK_SIZEOF(int,cross)
AC_CHECK_SIZEOF(long,cross)
AC_CHECK_SIZEOF(short,cross)

# Create Makefile
AC_SUBST(APXS_FLAGS)
AC_SUBST(SODIR)
AC_OUTPUT(Makefile)
